PBO fix for ellipse clipping of dates

--- a/pbo/app/front/css/pbo-responsive-sass.scss
+++ b/pbo/app/front/css/pbo-responsive-sass.scss
@@ -56,11 +56,7 @@
     padding: 7px 0px 8px 8px;
     a {
       font-size: 14px;
-      -ms-text-overflow: ellipsis;
-      -o-text-overflow: ellipsis;
-      text-overflow: ellipsis;
       white-space: nowrap;
-      overflow: hidden;
       h1 {
         font-size: 14px;
       }
